feat(api): automate OpenAPI documentation
